namespaces/live.cloud-platform.service.justice.gov.uk/laa-fee-scheme-api-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-fee-scheme-api-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-fee-scheme-platform"
    cloud-platform.justice.gov.uk/application: "Calculate fees for claims submitted by LAA Providers"
    cloud-platform.justice.gov.uk/owner: "LAA Fee Scheme: laa-fee-scheme-platform@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-fee-scheme-api"
    cloud-platform.justice.gov.uk/team-name: "laa-fee-scheme"
    cloud-platform.justice.gov.uk/review-after: ""
